src/test/ui/union/union-const-pat.stderr
error: cannot use unions in constant patterns
  --> $DIR/union-const-pat.rs:10:9
   |
LL |         C => {}
   |         ^

error: cannot use unions in constant patterns
  --> $DIR/union-const-pat.rs:10:9
   |
LL |         C => {}
   |         ^

error: aborting due to 2 previous errors

